# aegis-protocol

./: .gitignore  .pnpm-build-scripts.json  .vercelignore  CLAUDE.md  ONE-PAGER.md  PRD.md  README.md  SUBMISSION-STELLAR.md  SUBMISSION.md  TUTORIAL.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vercel.json
apps/api/: .env.example  package.json  railway.json  tsconfig.json  vercel.json
apps/api/api/: index.ts
apps/e2e/: .gitignore  package.json  playwright.config.ts  tsconfig.json
apps/web/: .env.example  auth.ts  middleware.ts  next.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vercel.json
contracts/aegis-audit/: Cargo.toml
contracts/aegis-audit/src/: lib.rs
contracts/aegis-audit/test_snapshots/test/: initialize_twice_panics.1.json  ping_returns_pong.1.json  record_decision_emits_event.1.json  set_admin_transfers_role.1.json
docs/: 00-vision.md  01-requirements.md  02-architecture.md  03-domain-model.md  04-stellar-asset-design.md  05-zero-friction-onboarding.md  06-fiat-onramp-sep24.md  07-api-contract.md  08-soroban-audit.md  09-policy-dsl.md  10-security.md  11-roadmap.md
docs/adr/: 0001-stellar-only-mvp.md  0002-usdc-via-sep24-anchor.md  0003-soroban-contrato-global.md  0004-hot-wallet-mvp-kms-mainnet.md  0005-http-402-como-gateway.md  (+6 more)
flg/: log.md  post-001.md  post-002.md  post-003.md
grant-evidence/: milestone-3-dashboard-tutorial.md  milestone-3-operational-hardening.md
interviews/: dm-template.md  log.md  script.md
prisma/: schema.prisma
validation/: hypothesis-v1.md
(+156 files in other folders)
